# Kidney-Disease-Classification

./: .gitignore  Dockerfile  README.md  app.py  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  scores.json  setup.py  template.py
.dvc/: config
config/: config.yaml
research/: 01-Data_ingestion.ipynb  02-Prepare_base_model.ipynb  03-model-training.ipynb  04-model_evaluation.ipynb  trials.ipynb
src/CNNClassifierKidneyDiseases/: __init__.py
src/CNNClassifierKidneyDiseases/components/: data_ingestion.py  model_evaluation.py  model_training.py  prepare_base_model.py
src/CNNClassifierKidneyDiseases/config/: configuration.py
src/CNNClassifierKidneyDiseases/constants/: __init__.py
src/CNNClassifierKidneyDiseases/entity/: config_entity.py
src/CNNClassifierKidneyDiseases/pipeline/: first_data_ingestion.py  prediction.py  stage_02_prepare_base_model.py  stage_03_model_training.py  stage_04_model_evaluation.py
src/CNNClassifierKidneyDiseases/utils/: common.py
