[project]
name = "kidney-disease-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "pyarrow>=20.0.0",
]

[dependency-groups]
dev = [
    "dvc>=3.60.1",
    "ensure==1.0.2",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "gdown>=5.2.0",
    "joblib>=1.5.1",
    "kidney-disease-classification",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "notebook>=7.4.4",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "python-box==6.0.2",
    "pyyaml>=6.0.2",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.uv.sources]
kidney-disease-classification = { workspace = true }
